[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development"]
description = "Rollback safe utilities and abstractions for Bevy"
edition = "2021"
keywords = ["gamedev", "bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_roll_safe"
repository = "https://github.com/johanhelsing/bevy_roll_safe"
version = "0.4.0"

[features]
default = ["bevy_ggrs", "math_determinism"]
bevy_ggrs = ["dep:bevy_ggrs"]
math_determinism = ["bevy_math/libm"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_state"] }
bevy_math = "0.16"
bevy_ggrs = { version = "0.18", optional = true, default-features = false }
