[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development"]
description = "Rollback safe utilities and abstractions for Bevy"
edition = "2021"
keywords = ["gamedev", "bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_roll_safe"
repository = "https://github.com/johanhelsing/bevy_roll_safe"
version = "0.5.0"

[features]
default = ["audio", "bevy_ggrs", "math_determinism"]
bevy_ggrs = ["dep:bevy_ggrs"]
math_determinism = ["bevy_math/libm"]
audio = ["bevy/bevy_audio", "bevy/bevy_asset"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_state"] }
bevy_math = "0.17"
bevy_ggrs = { version = "0.19", optional = true, default-features = false }

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = ["debug"] }
